--- a/src/components/CategoryChart.css
+++ b/src/components/CategoryChart.css
@@ -1,8 +1,21 @@
 .category-chart {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.category-chart .chart-title {
+  font-size: 14px;
+  font-weight: 500;
+  color: #6B7280;
+  margin-bottom: 16px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  text-align: left;
+}
+
+.category-chart-wrapper {
+  flex: 1;
 }
 
 
